extends Node

# Eventually implement save game functionality

func _on_save_game_1_pressed():
	get_tree().change_scene_to_file("res://level_select.tscn")


func _on_save_game_2_pressed():
	get_tree().change_scene_to_file("res://level_select.tscn")


func _on_save_game_3_pressed():
	get_tree().change_scene_to_file("res://level_select.tscn")
